--- a/navBar.css
+++ b/navBar.css
@@ -3,6 +3,7 @@ body{
     margin: 0;    
     padding: 0;
     background: white;
+    
 }
 
 .menubar{
@@ -20,8 +21,8 @@ body{
 
 .menubar ul{
     list-style: none;
-    display: flex; 
-   ;
+    display: flex;   
+    margin-right: 100px;
          
 }
 
@@ -29,8 +30,7 @@ body{
     margin-right: 10px;   
     padding: 5px; 
     border-radius: 5px; 
-    cursor: pointer;
-
+    cursor: pointer;  
     
 }
 
@@ -43,9 +43,8 @@ body{
 }
 
 .menubarul li a{
-    color: indigo;
-    font-weight: bold;
-    font-size: 12px;
+    color: indigo;    
+    font-size: 18px;
     text-decoration: none;
     
 }
@@ -98,7 +97,7 @@ body{
 
 .brand{
     font-size: 32px;
-    margin-left: 10px;
+    margin-left: 100px;
     text-shadow: 3px 2px rgb(171, 12, 211);
     color: indigo;       
 }
@@ -159,7 +158,7 @@ body{
     .submenubar ul li{
         position:relative;
         top: -50px;
-        left: 75px;
+        left: 90px;
     }  
        
     
